@@ -21,8 +21,8 @@ package org.apache.shindig.gadgets.uri;
 import static org.easymock.EasyMock.eq;
 import static org.easymock.EasyMock.expect;
 import static org.easymock.EasyMock.isA;
-import static org.easymock.classextension.EasyMock.createMock;
-import static org.easymock.classextension.EasyMock.replay;
+import static org.easymock.EasyMock.createMock;
+import static org.easymock.EasyMock.replay;
 import static org.junit.Assert.assertEquals;
 import static org.junit.Assert.assertTrue;
 
@@ -312,7 +312,7 @@ public class DefaultProxyUriManagerTest extends UriManagerTestBase {
     String host = "host.com";
     String path = "/proxy/path";
     DefaultProxyUriManager manager = makeManager("foo" + host, path, null);
-    manager.setUseStrictParsing("true");
+    manager.setUseStrictParsing(true);
     Uri testUri = new UriBuilder().setAuthority(host).setPath(path)
         .addQueryParameter(Param.URL.getKey(), "http://foo.com").toUri();
     manager.process(testUri);
@@ -409,7 +409,7 @@ public class DefaultProxyUriManagerTest extends UriManagerTestBase {
     assertEquals(orig, proxyUri.getResource());
     assertEquals(debug, proxyUri.isDebug());
     assertEquals(noCache, proxyUri.isNoCache());
-    assertEquals(noCache ? new Integer(0) : refresh, proxyUri.getRefresh());
+    assertEquals(noCache ? Integer.valueOf(0) : refresh, proxyUri.getRefresh());
     assertEquals(CONTAINER, proxyUri.getContainer());
     assertEquals(SPEC_URI.toString(), proxyUri.getGadget());
     
@@ -441,7 +441,7 @@ public class DefaultProxyUriManagerTest extends UriManagerTestBase {
     int proxyEnd = uriStr.indexOf("/proxy/") + "/proxy/".length();
     String paramsUri = uriStr.substring(
         proxyEnd,
-        (endOfPath ? uriStr.indexOf("/", proxyEnd) : uriStr.indexOf("/path")));
+        (endOfPath ? uriStr.indexOf('/', proxyEnd) : uriStr.indexOf("/path")));
     uri = new UriBuilder().setQuery(paramsUri).toUri();
     
     // "Raw" query param verification.
